# passprompt

./: Cargo.toml  README.md
src/: config.rs  error.rs  main.rs  state.rs  util.rs
src/commands/: add.rs  ask.rs  config.rs  list.rs  mod.rs  remove.rs  set.rs
