[package]
rust-version = "1.87.0"
name = "passprompt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "2.33.3"
xdg = "^2.1"
toml = "0.5.3"
serde = { version = "1.0.118", features = ["derive"] }
rpassword = "5.0.0"
rprompt = "1.0.5"
rand = "0.8.0"
base64 = "0.13.0"
rust-crypto = "^0.2"
regex = "1"
