[package]
rust-version = "1.87.0"
name = "passprompt"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "2.33.3"
xdg = "^3.0"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
rpassword = "7.4.0"
rprompt = "2.2.0"
rand = "0.9.1"
base64 = "0.22.1"
rust-crypto = "^0.2"
regex = "1"
ctrlc = { version = "3.4.7", features = ["termination"] }
